Added some stuff

--- a/cs180/project0/index.html
+++ b/cs180/project0/index.html
@@ -9,23 +9,22 @@
 </head>
 <body>
   <header class="header">
-    <h1>Project 0: Your Descriptive Title</h1>
-    <p class="subtitle">Brief one-line summary of what you built or learned.</p>
+    <h1>Project 0: Becoming Friends with Your Camera</h1>
+    <p class="subtitle">9/2/25</p>
   </header>
 
   <main class="container">
     <!-- Header 1 + two side-by-side photos -->
     <section class="section">
-      <h2>1) Problem & Approach</h2>
-      <p>Write 2–4 sentences describing the problem, your high-level method, and any tools or libraries used.</p>
+      <h2>Part 1. Selfie</h2>
       <div class="media-row">
         <figure>
           <img src="./media/person-faraway.png" alt="Project 1—first result or diagram" />
-          <figcaption>Figure 1. Far away with zoom.</figcaption>
+          <figcaption>Far away with zoom</figcaption>
         </figure>
         <figure>
           <img src="./media/person-closeup.png" alt="Project 1—second result or comparison" />
-          <figcaption>Figure 2. Close up without zoom.</figcaption>
+          <figcaption>Close up without zoom</figcaption>
         </figure>
       </div>
     </section>
@@ -34,16 +33,15 @@
 
     <!-- Header 2 + optional text (photos already covered above) -->
     <section class="section">
-      <h2>2) Results & Discussion</h2>
-      <p>Add observations, metrics, or lessons learned. If you have more images, duplicate a <code>&lt;figure&gt;</code> block above.</p>
+      <h2>Part 2. Architectural Perspective Compression</h2>
       <div class="media-row">
         <figure>
           <img src="./media/urban-faraway.png" alt="Project 1—first result or diagram" />
-          <figcaption>Figure 1. Far away with zoom. </figcaption>
+          <figcaption>Far away with zoom </figcaption>
         </figure>
         <figure>
           <img src="./media/urban-closeup.png" alt="Project 1—second result or comparison" />
-          <figcaption>Figure 2. Close up with less zoom. </figcaption>
+          <figcaption>Close up with less zoom. </figcaption>
         </figure>
       </div>
     </section>
@@ -52,10 +50,10 @@
 
     <!-- Header 3 + GIF -->
     <section class="section">
-      <h2>3) Demo</h2>
+      <h2>Part 3. Dolly Zoom</h2>
       <figure>
         <img src="./media/dollyzoom.gif" alt="Dolly zoom gif of Fern." />
-        <figcaption>Animated demo of the system or visualization in action.</figcaption>
+        <figcaption>Dolly zoom gif of Fern</figcaption>
       </figure>
     </section>
 
